<resources>
    <string name="app_name">Exless</string>
    <string name="ketentuan_layanan">Dengan membuat akun berarti kamu setuju dengan <b><u>Ketentuan Layanan Kami</u></b></string>
    <string name="daftarlogin"><u>Sudah punya akun? Masuk disini</u></string>
    <string name="akanregister"><u>Belum punya akun? Daftar</u></string>
    <string name="onbonding1">Ayo susun makanan sesuai kebutuhan demi kurangi sampah makanan ❤️</string>
    <string name="onbonding2">Menjaga makanan dengan baik, membuat kulkas kita lebih bersih ️️</string>
    <string name="onbonding3">Oper makanan sisa kepada pengelola sisa makanan agar bermanfaat ya!</string>
    <string name="tettlehome">Ada menambah makanan hari ini ?</string>
    <string name="subhome">Temukan referensi resep untuk dimasak hari ini</string>
    <string name="subwaster">Temukan kabar terbaru seputar sampah makanan</string>

    <string name="detailitem1"><b>Penyimpanan : </b></string>
    <string name="detailitem2"><b>Durasi Kesegaran : </b></string>
    <string name="detailitem3"><b>Optimalisasi : </b></string>
    <string name="detailitem4"><b>Pembekuan : </b></string>
    <string name="detailitem5"><b>Pengolahan lain : </b></string>

    <string name="default_web_client_id">661553876416-pf1rf07549e7pg26q8o2rgs76nk1m9ko.apps.googleusercontent.com</string>
    <string-array name="Jenis_makanan">
        <item>Kacang &amp; Protein</item>
        <item>Telur &amp; Bahan Harian</item>
        <item>Buah-buahan</item>
        <item>Sayur-sayuran</item>
        <item>Daging &amp; Unggas</item>
        <item>Makanan Laut</item>
        <item>Minyak &amp; Bumbu Dapur</item>
        <item>Tepung &amp; Olahannya</item>
        <item>Saos &amp; Kecap</item>
        <item>Makanan Kaleng</item>
    </string-array>
    <string-array name="Jenis_penyimpanan">
        <item>Kulkas</item>
        <item>Rak</item>
    </string-array>

    <string-array name="nama_bahan">
        <item>Buah Naga</item>
        <item>Nangka</item>
        <item>Nanas</item>

        <item>Pisang</item>
        <item>Jeruk</item>
        <item>Jambu Air</item>

        <item>Papaya</item>
        <item>Alpukat</item>
        <item>Jagung</item>

        <item>Semangka</item>
        <item>Melon</item>
        <item>Lemon</item>

        <item>Sayur Bayam</item>
        <item>Sayur Kangkung</item>
        <item>Sayur Sawi</item>

        <item>Wortel</item>
        <item>Timun</item>
        <item>Kacang panjang</item>

        <item>Cabe Merah</item>
        <item>Cabe Rawit</item>
        <item>Bawang Merah</item>

        <item>Bawang Putih</item>
        <item>Bawang Bombay</item>
        <item>Kunyit</item>

        <item>Jahe</item>
        <item>Toge</item>
        <item>Petai</item>

        <item>Brokoli</item>
        <item>Kepiting</item>
        <item>Cumi Cumi</item>
    </string-array>
    <string-array name="satuan">
        <item>pcs</item>
        <item>g</item>
        <item>dus</item>
        <item>buah</item>
        <item>buah</item>
        <item>buahsfsdfdsf</item>
    </string-array>

</resources>