<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_home"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bold"
                            android:text="Halo,"
                            android:textColor="@color/black"
                            android:textSize="40dp" />

                        <TextView
                            android:id="@+id/nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="45dp"
                            android:fontFamily="@font/bold"
                            android:text="Cahyo"
                            android:textColor="@color/black"
                            android:textSize="30dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="105dp"
                            android:fontFamily="@font/regular"
                            android:text="@string/tettlehome"
                            android:textColor="@color/black" />
                    </RelativeLayout>
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_userphotohome"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="60dp"
                    android:onClick="toprofile"
                    android:src="@drawable/kucing" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_bhnmakan"
                    android:layout_width="370dp"
                    android:layout_height="70dp"
                    android:background="@drawable/btn_add_food"
                    android:fontFamily="@font/regular"
                    android:onClick="toaddbahan"
                    android:text="Tambah Bahan Makanan"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="110dp"
                    android:fontFamily="@font/semibold"
                    android:text="Aktivitas Makananmu"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <!--                tab 1-->
                <LinearLayout
                    android:id="@+id/aktifitas_kosong"
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/aktivitas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:onClick="toaddbahan"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/graylight"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginBottom="5dp"
                                android:src="@drawable/ic_add" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/regular"
                                android:text="Aktivitas Makananmu Kosong"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!--                tab 2-->
                <LinearLayout
                    android:id="@+id/pemberitahuan_terisi"
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:onClick="tosimpanan"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/ijotuo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp">

                            <ImageView
                                android:layout_width="200dp"
                                android:layout_height="130dp"
                                android:layout_marginLeft="200dp"
                                android:layout_marginTop="20dp"
                                android:src="@drawable/pemberitahuanterisi" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="13dp"
                                android:fontFamily="@font/bold"
                                android:text="Mau Makan ?"
                                android:textColor="@color/white"
                                android:textSize="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="55dp"
                                android:fontFamily="@font/semibold"
                                android:text="Masih ada stock makanan, cek you !"
                                android:textColor="@color/white"
                                android:textSize="12dp" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <!--                tab 3-->
                <LinearLayout
                    android:id="@+id/pemberitahuan_expired"
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:onClick="toseeexpiredmain">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/red" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp">

                            <ImageView
                                android:layout_width="200dp"
                                android:layout_height="130dp"
                                android:layout_marginLeft="200dp"
                                android:src="@drawable/pemberitahuanexpired" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="13dp"
                                android:fontFamily="@font/bold"
                                android:text="Waduh"
                                android:textColor="@color/white"
                                android:textSize="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_marginTop="55dp"
                                android:fontFamily="@font/semibold"
                                android:text="Bahan makananmu akan kadaluarsa !"
                                android:textColor="@color/white"
                                android:textSize="12dp" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <RelativeLayout
                        android:layout_width="280dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:fontFamily="@font/semibold"
                            android:text="Resep Seimbang"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/subhome"
                            android:textColor="@color/grey"
                            android:textSize="10sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/fullresep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/semibold"
                            android:text="Lihat Semua >"
                            android:textColor="@color/ijotuo" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_resep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_list_resep" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="280dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/semibold"
                            android:text="Food Wasting Update"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/subwaster"
                            android:textColor="@color/grey"
                            android:textSize="10sp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/fullberita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="@font/semibold"
                            android:onClick="detailberita"
                            android:text="Lihat Semua >"
                            android:textColor="@color/ijotuo" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_list_berita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:listitem="@layout/item_list_detail_berita" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    

</androidx.constraintlayout.widget.ConstraintLayout>
